# advent-of-code-2022

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/advent-of-code-2022/day00/: main.py
src/advent-of-code-2022/day01/: main.py
src/advent-of-code-2022/day02/: main.py
src/advent-of-code-2022/day03/: main.py
src/advent-of-code-2022/day04/: main.py
src/advent-of-code-2022/day05/: main.py
src/advent-of-code-2022/day06/: main.py
src/advent-of-code-2022/day07/: main.py
src/advent-of-code-2022/day08/: main.py
src/advent-of-code-2022/day09/: main.py  output.txt
src/advent-of-code-2022/day10/: main.py  output.txt
src/advent-of-code-2022/day11/: main.py
src/advent-of-code-2022/day12/: main.py
src/advent-of-code-2022/day13/: main.py
src/advent-of-code-2022/day14/: main.py
tests/: test_python_template.py
