[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["app"]

    [tool.poetry.dependencies]
    python = "^3.10"
    numpy = "^1.23.5"
    pandas = "^1.5.2"
    pydantic = "^1.10.2"
    Dijkstar = "^2.6.0"

    [tool.poetry.dev-dependencies]
    black = "^22.3.0"
    isort = "^5.9.3"
    mypy = "^0.961"
    pylint = "^2.14.3"
    pytest = "^7.1.2"
    pytest-cov = "^3.0.0"
    tomlkit = "^0.11.0"

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
max-line-length = 120
extension-pkg-whitelist = "pydantic"
ignore-long-lines = "^.*https?://.+$"
disable = [
    "fixme",
    "missing-module-docstring",
]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true
plugins = "pydantic.mypy"

    [[tool.mypy.overrides]]
    module = "tests.*"
    disallow_untyped_defs = false
    # Ignore errors with pydantic validators for type check
    ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
